--- a/doc/guide/guide.tex
+++ b/doc/guide/guide.tex
@@ -100,6 +100,8 @@
 \input{schematic}
 \input{PCB}
 \input{software}
+\input{firstprogram}
+\input{testprograms}
 \input{troubleshooting}
 \input{rework}
 \input{debugging}
