--- a/doc/guide/troubleshooting.tex
+++ b/doc/guide/troubleshooting.tex
@@ -13,7 +13,7 @@ The best tool for debugging an embedded system is an oscilloscope.
 
 \begin{enumerate}
 \item
-  Use x10 probes to reduce loading on the circuit.
+  Use $\times$10 probes to reduce loading on the circuit.
 \item
   Use the correct probes for the scope so that they can be automatically
   detected.
@@ -75,7 +75,7 @@ If a program has been loaded:
 \end{enumerate}
 
 
-\subsubsection{Erasing flash memory}
+\subsection{Erasing flash memory}
 \label{erasing-flash-memory}
 
 \begin{enumerate}
@@ -88,7 +88,7 @@ If a program has been loaded:
 \end{enumerate}
 
 
-\subsubsection{Debugging serial wire debug (SWD)}
+\subsection{Debugging serial wire debug (SWD)}
 \label{debugging-serial-wire-debug-swd}
 
 \program{OpenOCD} periodically polls to see if the SAM4S is alive.
@@ -198,12 +198,44 @@ does not work.
    USB serial driver will drop characters.
  \end{itemize}
 
-\section{Testing peripherals}
-\label{testing-peripherals}
+ 
+\section{Motors}
+\label{motors-testing}
 
- 
-\subsection{Motors}
- 
+For the motors to work:
+%
+\begin{enumerate}
+\item The H-bridge must be correctly configured.  
+\item The PWM signals must be correctly generated.
+\end{enumerate}
+
+
+\subsection{Testing the H-bridge}
+\label{testing-the-h-bridge}
+
+\begin{enumerate}
+\item The \sig{nFAULT} pin should be high.  Note, this is an
+  open-drain pin and requires a pullup resistor to 3V3 to make it
+  work.  Without this resistor, this pin will always read low, fault
+  or no fault.  If this is connected to the SAM4S, it will be pulled
+  up by default.
+
+\item The \sig{nSLEEP} pin needs to be high to enable the chip.
+
+\item Check that the capacitor connected to the \sig{INT} pin is
+  2.2\,$\mu$F and not 2.2\,nF.
+
+\item Check the \sig{AIN1}, \sig{AIN2}, \sig{BIN1}, \sig{BIN2} pins.
+  If you see DC 2\,V, this is due to the signal not being configured
+  as an output on the SAM4S; the internal pullup of the SAM4S forms a
+  voltage divider with the internal pulldown of the H-bridge chip.
+
+\item Check that \sig{AINSENSE} and \sig{BINSENSE} are connected
+  directly to ground or to ground via a small resistor if you want
+  current limiting.
+\end{enumerate}
+
+
 \subsection{Debugging PWM}
 \label{debugging-pwm}
 
@@ -241,34 +273,18 @@ If the PWM duty is wrong:
 \end{figure}
 
 
-\subsubsection{Testing the H-bridge}
-\label{testing-the-h-bridge}
+\section{IMU}
+\label{imu}
 
+For the IMU to work:
+%
 \begin{enumerate}
-\item The \sig{nFAULT} pin should be high.  Note, this is an
-  open-drain pin and requires a pullup resistor to 3V3 to make it
-  work.  Without this resistor, this pin will always read low, fault
-  or no fault.  If this is connected to the SAM4S, it will be pulled
-  up by default.
-
-\item The \sig{nSLEEP} pin needs to be high to enable the chip.
-
-\item Check that the capacitor connected to the \sig{INT} pin is
-  2.2\,$\mu$F and not 2.2\,nF.
-
-\item Check the \sig{AIN1}, \sig{AIN2}, \sig{BIN1}, \sig{BIN2} pins.
-  If you see DC 2\,V, this is due to the signal not being configured
-  as an output on the SAM4S; the internal pullup of the SAM4S forms a
-  voltage divider with the internal pulldown of the H-bridge chip.
-
-\item Check that \sig{AINSENSE} and \sig{BINSENSE} are connected
-  directly to ground or to ground via a small resistor if you want
-  current limiting.
+\item The IMU chip must be correctly configured.  
+\item The I2C bus must be working.
 \end{enumerate}
 
 
-\subsection{IMU}
-\label{imu}
+\subsection{IMU checking}
 \label{checking-IMU}
 
 \begin{enumerate}
@@ -282,7 +298,6 @@ If the PWM duty is wrong:
   the microscope at the pins of the IMU and touch them up with a
   soldering iron if necessary.
 \end{enumerate}
-
 
 
 \subsection{Debugging I2C}
@@ -306,7 +321,7 @@ If the PWM duty is wrong:
 \mtodo{Add scope picture of I2C signals with no acknowledge}
 
 
-\subsection{NRF24L01+ radio}
+\section{NRF24L01+ radio}
 \label{nrf24l01-radio}
 
 For the radio to work you need:
@@ -359,12 +374,12 @@ If no acknowledgement is received, it retries for up to 15 times. The
 auto-acknowledgement and number of retries can be configured in
 software.
 
-\subsubsection{Checking the radio power supply}
+\subsection{Checking the radio power supply}
 \label{checking-the-radio-power-supply}
 
 \mtodo{Add scope picture of expected radio power supply voltage}
 
-\subsubsection{Debugging SPI}
+\subsection{Debugging SPI}
 \label{debugging-spi}
 
 Check:
