--- a/doc/guide/rework.tex
+++ b/doc/guide/rework.tex
@@ -1,8 +1,8 @@
 \chapter{Rework}
 
 Flux is your friend when doing rework.  However, you need to remove it
-from your board when finished.  Initially, use flux-cleaner with a
-brush and clean with a towel.  Then apply IPA and clean with towel.
+from your board when finished, see \hyperref[flux removal]{flux
+  removal}.
 
 
 \section{Removing resistors and capacitors}
@@ -31,9 +31,9 @@ brush and clean with a towel.  Then apply IPA and clean with towel.
 \begin{enumerate}
 \item Apply flux from syringe to all pins.
 
-\item Get Scott to show you how to use the hot-air gun.  They key is
-  to choose a head that matches the size of the MCU.
-  
+\item Get Scott to show you how to use the hot-air gun.  The key is to
+  choose a head that matches the size of the MCU and getting the
+  temperature correct.
 \end{enumerate}
 
 
@@ -52,4 +52,14 @@ brush and clean with a towel.  Then apply IPA and clean with towel.
 \item Apply flux from syringe to both pads.
 
 \item Use small soldering iron.  
+\end{enumerate}
+
+
+\section{Flux removal}
+
+\begin{enumerate}
+\item Scrub board with using flux-cleaner and brush.
+\item Clean board with a towel.
+\item Wash board with a little bit of IPA.
+\item Clean board with a towel.  
 \end{enumerate}
