--- a/doc/guide/software.tex
+++ b/doc/guide/software.tex
@@ -14,10 +14,12 @@ require:
   A computer with \program{git} installed and a useful shell program such as
   \program{bash}. UC has a \href{http://ucmirror.canterbury.ac.nz/}{mirror}
   for a variety of Linux distributions; we recommend Ubuntu or Mint.
+
+\item A cloned copy of the Wacky Racers git repository, see \hyperref[project-cloning]{project cloning}.
+
 \item
-  A working ARM toolchain (arm-none-eabi-gcc/g++ version 4.9.3 or newer).
-\item
-  \program{OpenOCD} V0.8.0 or later.
+  A working ARM toolchain (arm-none-eabi-gcc/g++ version 4.9.3 or newer), see \hyperref[toolchain]{toolchain}.
+
 \item
   An ST-link programmer and 10-wire ribbon cable for programming. You
   can get the adaptor from Scott Lloyd in the SMT lab. You will need
@@ -25,13 +27,13 @@ require:
   stripe with the small arrow denoting pin 1 on the connector. For a
   rainbow ribbon cable, connect the brown wire to pin 1.). There are
   two variants of the ST-link programmer with \textbf{different
-    pinouts} so you may need to customise your programming cable.
+  pinouts} so you may need to customise your programming cable.
 \item
   Plenty of gumption.
 \end{itemize}
 
 
-\subsection{Git}
+\section{Git}
 
 Your group leader should fork the Wacky Racers project template.  This
 creates your own group copy of the project on the eng-git server that
@@ -98,7 +100,7 @@ $ git clone https://eng-git.canterbury.ac.nz/groupleader-userid/wacky-racers-202
 \end{minted}
 
 
-\subsection{Toolchain}
+\section{Toolchain}
 \label{toolchain}
 
 The toolchain comprises the compiler, linker, debugger, C-libraries,
@@ -108,14 +110,14 @@ The toolchain is installed on computers in the ESL and CAE. It should
 run under both Linux and Windows.  If there is a problem ask the
 technical staff.
 
-The toolchain can be downloaded for Windows, Linux, and MacOS from
+The toolchain can be downloaded for Windows, Linux, and MacOS
 from \url{https://developer.arm.com/tools-and-software/open-source-software/developer-tools/gnu-toolchain/gnu-rm/downloads}.
 
 To install parts of the toolchain separately, see the instructions in
 the following subsections.
 
 
-\subsubsection{Toolchain for Linux}
+\subsection{Toolchain for Linux}
 
 First, if using Ubuntu or Mint, ensure the latest versions are
 downloaded:
@@ -148,7 +150,7 @@ Install OpenOCD:
 $ sudo apt install openocd
 \end{minted}
 
-\subsubsection{Toolchain for MacOS}
+\subsection{Toolchain for MacOS}
 
 For MacOS machines that have \href{https://brew.sh}{homebrew}
 installed, you can use the following command:
@@ -158,351 +160,6 @@ $ brew install openocd git
 $ brew cask install gcc-arm-embedded
 \end{minted}
 
-
-\subsection{Configuration}
-\label{configuration}
-
-Each board has different PIO definitions and requires its own
-configuration information. The \wfile{boards} directory contains a
-number of configurations; one for the hat and and one for racer boards
-that you edit.  Each configuration directory contains three files:
-
-\begin{itemize}
-\item
-  \file{board.mk} is a makefile fragment that specifies the MCU model,
-  optimisation level, etc.
-\item
-  \file{target.h} is a C header file that defines the PIO pins and
-  clock speeds.
-\item
-  \file{config.h} is a C header file that wraps target.h. Its purpose
-  is for porting to different compilers.
-\end{itemize}
-
-\textbf{You will need to edit the target.h file for your board} and set
-the definitions appropriate for your hardware. Here's an excerpt from
-\file{target.h} for a hat board:
-
-\begin{minted}{C}
-/* USB  */
-#define USB_VBUS_PIO PA5_PIO
-
-/* ADC  */
-#define ADC_BATTERY PB3_PIO
-#define ADC_JOYSTICK_X PB2_PIO
-#define ADC_JOYSTICK_Y PB1_PIO
-
-/* IMU  */
-#define IMU_INT_PIO PA0_PIO
-
-/* LEDs  */
-#define LED1_PIO PA20_PIO
-#define LED2_PIO PA23_PIO
-\end{minted}
-
-\section{First program}
-\label{first-program}
-
-Your first program to test your board should only flash an LED (the
-hello world equivalent for embedded systems). The key to testing new
-hardware is to have many programs that only do one simple task each.
-
-\begin{figure}
-\input{figs/openocd.schtex}
-\caption{How OpenOCD interacts with the debugger and the SAM4S.}
-\label{fig:openocd diagram}
-\end{figure}
-
-
-\subsection{OpenOCD}
-\label{openocd}
-
-\program{OpenOCD} is used to program the SAM4S, see \reffig{openocd diagram}.
-
-For this assignment, we use a ST-link programmer to connect to the
-SAM4S using serial wire debug (SWD). This connects to your board with
-a 10-wire ribbon cable and an IDC connector.
-
-\begin{enumerate}
-\item
-  Before you start, disconnect the battery and other cables from your
-  PCB.
-\item
-  Connect a 10-wire ribbon cable from the ST-link programmer to the
-  programming header on your PCB. This will provide 3.3 V to your
-  board so your green power LED should light.
-\item
-  Open a \textbf{new terminal window, e.g., bash} and
-  start \program{OpenOCD}.
-\end{enumerate}
-
-\begin{minted}{bash}
-$ cd wacky-racers
-$ openocd -f src/mat91lib/sam4s/scripts/sam4s_stlink.cfg
-\end{minted}
-
-All going well, the last line output from \program{OpenOCD} should be:
-
-\begin{verbatim}
-Info : sam4.cpu: hardware has 6 breakpoints, 4 watchpoints
-\end{verbatim}
-
-Congrats if you get this! It means you have correctly soldered your
-SAM4S. If not, do not despair and do not remove your SAM4S. Instead,
-see \protect\hyperref[troubleshooting]{troubleshooting}.
-
-
-\subsection{LED flash program}
-\label{led-flash-program}
-
-For your first program, use
-\wfile{test-apps/ledflash1/ledflash1.c}. The macros
-\code{LED1_PIO} and \code{LED2_PIO} need to be defined in
-\file{target.h} (see
-\protect\hyperref[configuration]{configuration}).
-
-\inputminted{C}{../../src/test-apps/ledflash1/ledflash1.c}
-
-\subsection{Compilation}
-\label{compilation}
-
-Due to the many files required, compilation is performed using
-makefiles.
-
-The demo test programs are generic and you need to specify which board
-you are compiling them for. The board configuration file can be chosen
-dynamically by defining the environment variable \code{BOARD}. For
-example:
-%
-\begin{minted}{bash}
-$ cd src/test-apps/ledflash1
-$ BOARD=racer make
-\end{minted}
-
-If all goes well, you should see at the end:
-%
-\begin{verbatim}
-   text    data     bss     dec     hex filename
-  11348	   2416	    176	  13940	   3674	ledflash1.bin
-\end{verbatim}
-
-To avoid having to specify the environment variable \code{BOARD}, you
-can define it for the rest of your session using:
-%
-\begin{minted}{bash}
-$ export BOARD=racer
-\end{minted}
-%
-and then just use:
-%
-\begin{minted}{bash}
-$ make
-\end{minted}
-
-\subsection{Booting from flash memory}
-\label{booting-from-flash-memory}
-
-By default the SAM4S runs a bootloader program stored in ROM. The SAM4S
-needs to be configured to run your application in flash memory.
-
-If \program{OpenOCD} is running you can do this with:
-
-\begin{minted}{bash}
-$ make bootflash
-\end{minted}
-
-Unless you force a complete erasure of the SAM4S flash memory by
-connecting the \pin{ERASE} pin to 3.3 V, you will not need to repeat
-this command.
-
-\subsection{Programming}
-\label{programming}
-
-If \program{OpenOCD} is running you can store your program in the flash
-memory of the SAM4S using:
-
-\begin{minted}{bash}
-$ make program
-\end{minted}
-
-When this finishes, one of your LEDs should flash. If so, congrats! If
-not, see \protect\hyperref[troubleshooting]{troubleshooting}.
-
-To reset your SAM4S, you can use:
-%
-\begin{minted}{bash}
-$ make reset
-\end{minted}
-
-\section{USB interfacing}
-\label{usb-interfacing}
-
-To help debug your programs, it is wise to use \wikiref{USB CDC}{USB
-  CDC}.  This is a serial protocol for USB.  With some magic, the
-stdin, stdout, and stderr streams can sent over USB.  For example,
-here's an example program
-\wfile{test-apps/usb_serial_test1/usb_serial_test1.c}.
-
-\inputminted{C}{../../src/test-apps/usb_serial_test1/usb_serial_test1.c}
-
-Note, the string \code{"/dev/usb_tty"} is used to name the USB serial
-device on the SAM4S so that it can be used by the C stdio function
-\code{freopen}\footnote{When running a program with an operating
-  system, this is all set up before \code{main} is called.}.
-
-To get this program to work you need to compile it and program the
-SAM4S using:
-%
-\begin{minted}{bash}
-$ cd wacky-racers/src/test-apps/usb_serial_test1
-$ make program
-\end{minted}
-
-You then need to connect your computer to the USB connector on your PCB.
-If you are running Linux, run:
-%
-\begin{minted}{bash}
-$ dmesg
-\end{minted}
-
-This should say something like:
-%
-\begin{verbatim}
-Apr 30 11:03:50 thing4 kernel: [52704.481352] usb 2-3.3: New USB device found, idVendor=03eb, idProduct=6202
-Apr 30 11:03:50 thing4 kernel: [52704.481357] usb 2-3.3: New USB device strings: Mfr=1, Product=2, SerialNumber=3
-Apr 30 11:03:50 thing4 kernel: [52704.482060] cdc_acm 2-3.3:1.0: ttyACM0: USB ACM device
-\end{verbatim}
-
-Congrats if you see \texttt{ttyACM0:\ USB\ ACM\ device}!  If not, see
-\wikiref{USB_debugging}{USB debugging}.
-
-You can now run a \wikiref{Serial_terminal_applications}{serial
-  terminal program}. For example, on Linux:
-%
-\begin{minted}{bash}
-$ gtkterm -p /dev/ttyACM0
-\end{minted}
-
-All going well, this will repeatedly print 'Hello world'.
-
-If run Linux and get an error 'device is busy', it is likely that the
-ModemManager program has automatically connected to your device on the
-sly. This program should be disabled on the ECE computers. For more
-about this and using other operating systems, see \wikiref{USB
-CDC}{USB CDC}.
-
-\section{Test programs}
-\label{test-programs}
-
-There are a number of test programs in the directory
-\wfile{test-apps}.  Where possible these are written to be
-independent of the target board using configuration files (see
-\protect\hyperref[configuration]{configuration}).
-
-\subsection{PWM test}
-\label{pwm-test}
-
-The program \wfile{test-apps/pwm_test2/pwm_test2.c} provides an
-example of driving PWM signals.
-
-\inputminted{C}{../../src/test-apps/pwm_test2/pwm_test2.c}
-
-Notes:
-%
-\begin{enumerate}
-\item
-  This is for a different H-bridge module that requires two PWM signals
-  and forward/reverse signals. You will need to generate four PWM
-  signals or be clever with two PWM signals.
-\item
-  The \code{pwm_cfg_t} structure configures the frequency, duty
-  cycle and alignment of the output PWM.
-\item The frequency is likely to be too high for your motor.
-\item \code{pwm_channels_start} is used to start the PWM channels simultaneously.  
-\end{enumerate}
-
-The most likely problem is that you have not used a PIO pin that can
-be driven as a PWM output. The SAM4S can generate four independent
-hardware PWM signals. See \wfile{mat91lib/pwm/pwm.c} for a list of
-supported PIO pins. Note, \pin{PA16}, \pin{PA30}, and \pin{PB13} are
-different options for PWM2.
-
-To drive the motors you will need to use a bench power supply. Start
-with the current limit set at 100\,mA maximum in case there are any
-board shorts.  When all is well, you can increase the current limit;
-you will need at least 1\,A.
-
-\subsection{IMU test}
-\label{imu-test}
-
-The MPU9250 IMU connects to the SAM4S using the I2C bus (aka TWI bus).
-The program \wfile{test-apps/imu_test1/imu_test1.c} provides an
-example of using the MPU9250 IMU.  All going well, this prints three
-16-bit acceleration values per line to USB CDC. Tip your board over,
-and the the third (z-axis) value should go negative since this
-measures the effect of gravity on a little mass inside the IMU pulling
-on a spring.
-
-If you get `ERROR: can't find MPU9250!', the main reasons are:
-
-\begin{enumerate}
-\item
-  You have specified the incorrect address.  Use 0x68 for
-  \code{MPU_ADDRESS} in \file{target.h} if the AD0 pin is connected to
-  ground otherwise use 0x69.
-\item
-  You are using TWI1. The \pin{PB4} and \pin{PB5} pins used by TWI1
-  default to JTAG pins. See
-  \protect\hyperref[disabling-jtag-pins]{disabling JTAG pins}.
-\end{enumerate}
-%
-See also \protect\hyperref[checking-IMU]{IMU checking}.
-
-Other problems:
-%
-\begin{enumerate}
-\item If you reset the SAM4S in the middle of a transaction with the
-IMU, the IMU gets confused and holds the \pin{TWD/SDA} line low. This
-requires recycling of the power or sending out some dummy clocks on
-the \pin{TWCK/SCL} signal.
-\end{enumerate}
-
-
-\subsection{Radio test}
-\label{radio-test}
-
-The program \wfile{test-apps/radio_tx_test1/radio_tx_test1.c} provides
-an example of using the radio as a transmitter.
-
-The companion program
-\wfile{test-apps/radio_rx_test1/radio_rx_test1.c} provides an example
-of using the radio as a receiver.
-
-Notes:
-%
-\begin{enumerate}
-\item
-  Both programs must use the same RF channel and the same address. Some
-  RF channels are better than others since some overlap with WiFi
-  and Bluetooth. The address is used to distinguish devices
-  operating on the same channel. Note, the transmitter expects an
-  acknowledge from a receiver on the same address and channel.
-\item
-  The radio `write` method blocks waiting for an auto-acknowledgement
-  from the receiver device. This acknowledgement is performed in
-  hardware. If no acknowledgement is received, it retries for up to 15
-  times. The auto-acknowledgement and number of retries can be
-  configured in software.
-
-\item If the program hangs in the \code{panic} loop, there is no
-  response from the radio module, check SPI connections and see
-  \hyperref[debugging_Spi]{SPI debugging}.
-  
-\end{enumerate}
-
-If you cannot communicate between your hat and racer boards, try
-communicating with the radio test modules Scott Lloyd has in the SMT
-lab.
 
 \section{Your hat/racer program}
 \label{your-hatracer-program}
