--- a/doc/guide/rework.tex
+++ b/doc/guide/rework.tex
@@ -29,11 +29,15 @@ from your board when finished, see \hyperref[flux removal]{flux
 \section{Removing MCU}
 
 \begin{enumerate}
+\item Only remove as last resort.
+  
 \item Apply flux from syringe to all pins.
 
 \item Get Scott to show you how to use the hot-air gun.  The key is to
   choose a head that matches the size of the MCU and getting the
   temperature correct.
+
+\item Be careful not to lift pads or tracks.  
 \end{enumerate}
 
 
