--- a/doc/guide/PCB.tex
+++ b/doc/guide/PCB.tex
@@ -1,11 +1,13 @@
 \chapter{PCB layout}
 
-
-\section{Introduction}
-\label{PCB_introduction}
-
 Before you lay out your PCB, an hour spent checking your schematic
 will avoid many hours of testing and rework grief!
+
+
+\section{Altium tutorial}
+
+The Altium tutorial for creating a PCB can be found on the ENCE461
+Learn page.
 
 
 \label{pcb-recommendations}
