--- a/doc/guide/firstprogram.tex
+++ b/doc/guide/firstprogram.tex
@@ -34,7 +34,7 @@ Before you run your first program, you need to:
 \end{figure}
 
 
-\section{OpenOCD}
+\section{Connecting with OpenOCD}
 \label{openocd}
 
 \program{OpenOCD} is used to program the SAM4S, see \reffig{openocd diagram}.
