--- a/doc/guide/hardware.tex
+++ b/doc/guide/hardware.tex
@@ -188,6 +188,12 @@ It has two different I2C addresses (0x68 and Ox69) depending on the
 state of the AD0 pin.
 
 
+\subsection{Buck converter}\label{buck-converter}
+
+The buck converter is a switch-mode regulator that converts the
+battery voltages to 5\,V DC.
+
+
 \subsection{Voltage regulators}\label{voltage-regulators}
 
 There are many flavours of \wikiref{voltage_regulators}{voltage regulator}.
