--- a/doc/guide/hardware.tex
+++ b/doc/guide/hardware.tex
@@ -161,6 +161,8 @@ power.  Instead of a resistor, a ferrite bead is better.
     \node[right=0.2] at (4, -2) {GND}; 
     \node at (6, -1) {nRF24};
   \end{circuitikz}
+  \caption{Power supply filtering; a ferrite bead is better than a resistor.}
+  \label{fig:radio-filtering}
 \end{figure}
 
 You cannot have a PCB plane near the antenna of the radio otherwise
