--- a/doc/guide/PCB.tex
+++ b/doc/guide/PCB.tex
@@ -32,7 +32,7 @@ Learn page.
 \item
   Place USB connector so it can be connected to.
 \item
-  Place connectors on edge with wires going away from the board.
+  Place connectors on edge of PCB with wires going away from the board.
 \end{enumerate}
 
 
@@ -89,12 +89,13 @@ chip manufacturer usually provides a recommended layout.
 \item Check your schematic.  Then get someone else to check your
   schematic.  Query every component.
 
-\item Perform a DRC (Design Rule Check)] on the PCB.
+\item Perform a DRC (Design Rule Check)].
   
-\item Add PCB test points, test points, and more test points.  '''You
-  never have enough''' for a prototype.  You have been warned!  If you
-  don't believe me, compare the size of an oscilloscope probe to a
-  surface mount IC pin.
+\item Add PCB test points, test points, and more test points.  You
+  will need one for every signal and power supply.  \textbf{You have
+    been warned!}  If you don't believe me, compare the size of an
+  oscilloscope probe to a surface mount IC pin and see if you can hold
+  the probe in place.
   
 \item Label the test points on the silk screen with meaningful names.
   
@@ -122,7 +123,7 @@ chip manufacturer usually provides a recommended layout.
   components.
   
 \item If placing vias under components with exposed metal pads, make
-  sure the vias are "tented" (covered in solder mask) to prevent
+  sure the vias are ``tented'' (covered in solder mask) to prevent
   unexpected shorts.
   
 \item Stitch power or ground planes where vias or tracks cut them up.
@@ -178,7 +179,10 @@ chip manufacturer usually provides a recommended layout.
 \item Make the pad for pin 1 of every IC square. Also consider putting
   a silkscreen dot next to pin 1.
 
-\item Leave at least 20-50 mils (0.5-1.3 mm) clearance between components and the edge of the board. This makes it less likely that inaccuracies in board fabrication will cause part of a pad to get chopped off.
+\item Leave at least 20--50\,mils (0.5--1.3\,mm) clearance between
+  components and the edge of the board. This makes it less likely that
+  inaccuracies in board fabrication will cause part of a pad to get
+  chopped off.
   
 \item Check for component clearances from enclosure including heights.
   
@@ -203,4 +207,7 @@ chip manufacturer usually provides a recommended layout.
 \item [Pad to plane] This is warning that you have added too much
   inductance by running a long trace from a plane via a via.  You
   should place the via closer to the pad.
+
+\mtodo{Add other violations.}
+  
 \end{description}
