Add sleeping and EMC

--- a/doc/guide/guide.tex
+++ b/doc/guide/guide.tex
@@ -81,10 +81,11 @@
 \newcommand{\wikiref}[2]{\href{http://ecewiki.elec.canterbury.ac.nz/mediawiki/index.php/#1}{\mintinline{bash}{#2}}}
 \newcommand{\pin}[1]{\texttt{#1}}
 \newcommand{\sig}[1]{\texttt{#1}}
-
+\newcommand{\ud}{\mathrm{d}}                    % upright d (derivative)
 
 \newcommand{\reffig}[1]{\mbox{Figure~\ref{fig:#1}}}
 \newcommand{\reftab}[1]{\mbox{Table~\ref{tab:#1}}}
+\newcommand{\refeqn}[1]{\mbox{(\ref{eqn:#1})}}
 
 \title{Mutley's Guide To The Wacky Racers, V.013E-3}
 \author{Michael Hayes}
@@ -110,6 +111,8 @@
 \appendix
 \input{openocd}
 \input{git}
+\input{sleeping}
+\input{EMC}
 %\input{assessment}
 
 
