Add LEDtape tests

--- a/doc/guide/EMC.tex
+++ b/doc/guide/EMC.tex
@@ -4,12 +4,12 @@
 Electromagnetic emission (EMI) occurs with changing electric and
 magnetic fields.  A good PCB design should have good electromagnetic
 compatibility (EMC); this means that it has low EMI and that is has
-low susceptiblity to changing electric and magnetic fields.
+low susceptibility to changing electric and magnetic fields.
 
 
 \section{Electromagnetic coupling}
 
-It is worth recapping the fundamental equations.  A changing agressor
+It is worth recapping the fundamental equations.  A changing aggressor
 current, $i_a(t)$, flowing around a loop induces a
 voltage\footnote{This voltage magically appears around a loop and does
   not obey Kirchhoff's voltage law.  It will mostly `appear' across
@@ -21,9 +21,9 @@ Faraday's law,
 \end{equation}
 %
 where $M$ is the mutual inductance.  The mutual inductance depends on
-the areas of the agressor and victim loops and their orientation.
+the areas of the aggressor and victim loops and their orientation.
 
-A changing agressor voltage induces a current in a victim circuit
+A changing aggressor voltage induces a current in a victim circuit
 according to
 %
 \begin{equation}
