--- a/doc/guide/testprograms.tex
+++ b/doc/guide/testprograms.tex
@@ -189,4 +189,17 @@ debouncing and state-transition detection.  For more details see
 \inputminted{C}{../../src/test-apps/button_test2/button_test2.c}
 
 
+\section{LEDtape tests}
+\label{ledtape}
+
+\wfile{test-apps/ledtape_test1/ledtape_test1.c} shows how to drive the
+LEDtape.
+
+\inputminted{C}{../../src/test-apps/ledtape-test1/ledtape-test1.c}
+
+
+\wfile{test-apps/ledtape_test2/ledtape_test2.c} uses a more
+sophisticated means of controlling the LEDs.
+
+\inputminted{C}{../../src/test-apps/ledtape-test2/ledtape-test2.c}
 
