--- a/doc/guide/firstprogram.tex
+++ b/doc/guide/firstprogram.tex
@@ -82,6 +82,10 @@ and \code{LED2_PIO} need to be defined in \file{target.h} (see
 
 \inputminted{C}{../../src/test-apps/ledflash1/ledflash1.c}
 
+The LED should flash at 2\,Hz.  If it does not, try the
+\hyperref[pwm-test]{PWM test} program and check the frequency with an
+oscilloscope.
+
 
 \section{Configuration}
 \label{configuration}
