--- a/doc/instructions/instructions.tex
+++ b/doc/instructions/instructions.tex
@@ -305,6 +305,113 @@ This is assessed after the competition.  The categories are:
 \end{enumerate}
 
 
+\section{Schedule}
+
+\begin{description}
+\item [Week~1]\mbox{}\\
+
+  \begin{itemize}
+  \item Form a group of four and register your group on Learn.
+  %\item Read the \hyperref[requirements]{requirements section}.
+  \item Read the requirements section in the instructions document.
+  \item Peruse the datasheets of the key components.
+  \end{itemize}
+  
+\item [Week~2]\mbox{}\\
+  
+  \begin{itemize}
+  \item Attend Altium schematic tutorial.
+  \item Start your schematic design.
+  \item Read suggestions in \hyperref[hardware]{hardware section}.
+  \end{itemize}
+  
+\item [Week~3]\mbox{}\\
+  
+  \begin{itemize}
+  \item Submit you Altium schematic for review.
+  \item Attend review feedback session.
+  \end{itemize}
+  
+\item [Week~4]\mbox{}\\
+  
+  \begin{itemize}
+  \item Attend Altium PCB tutorial.
+  \item Start your PCB layout.
+  \end{itemize}
+  
+  
+\item [Week~5]\mbox{}\\
+  
+  \begin{itemize}
+  \item Attend SMT lab induction.
+  \item Submit PCB design (early round).
+  \end{itemize}
+  
+  
+\item [Week~6]\mbox{}\\  
+  
+  \begin{itemize}
+  \item Submit PCB design (late round).
+  \end{itemize}
+  
+  
+\item [Week~7]\mbox{}\\
+  
+  
+\item [Week~8]\mbox{}\\  
+  
+\item [Week~9]\mbox{}\\
+  
+  \begin{itemize}
+  \item Populate and test PCB.
+  \end{itemize}  
+  
+  
+\item [Week~10]\mbox{}\\
+
+  \begin{itemize}
+  \item Populate and test PCB.
+  \item Demonstrate blinky program.
+  \end{itemize}
+
+\item [Week~11]\mbox{}\\  
+
+  \begin{itemize}
+  \item Demonstrate blinky program.
+  \end{itemize}  
+ 
+\item [Week~12]\mbox{}\\
+  
+  \begin{itemize}
+  \item Demonstrate IMU/motors functionality.
+  \end{itemize}
+  
+\item [Week~13]\mbox{}\\  
+  
+  \begin{itemize}
+  \item Demonstrate radio control.
+  \end{itemize}  
+  
+\item [Week~14]\mbox{}\\
+  
+  \begin{itemize}
+  \item Demonstrate full functionality.
+  \item Plan your costumes!
+  \end{itemize}
+  
+\item [Week~15]\mbox{}\\
+  
+  \begin{itemize}
+  \item Practice control of you wacky racer.
+  \item Attend wacky race.
+  \item Submit PCB for inspection (box in SMT lab).
+  \item Return chassis and batteries.
+  \item Submit individual critique to Learn.    
+  \end{itemize}
+  
+\end{description}
+
+
 
 \section{Technical stuff}
 
@@ -547,7 +654,8 @@ have missed and let you fix it without asking for help.
 
 \item All decisions regarding legality of your dastardly devices are
   at the whim of Ben Mitchell.  You can email Ben at
-  \href{mailto://ben.mitchell@pg.canterbury.ac.nz}{ben.mitchell@pg.canterbury.ac.nz} if you wish to keep your ideas secret.
+  \href{mailto://ben.mitchell@pg.canterbury.ac.nz}{ben.mitchell@pg.canterbury.ac.nz}
+  if you wish to keep your ideas secret.
 
 \item TAs will be available in the scheduled lab times.  Priority will
   be given to groups assigned to the current lab session. \textbf{We
